--- a/src/app/views/repair/repair.detail.component.html
+++ b/src/app/views/repair/repair.detail.component.html
@@ -13,8 +13,9 @@
                             <div class="form-group" style="margin-top: 50px;">
                                 <label class="col-sm-2 control-label">报修内容</label>
                                 <div class="col-sm-8">
-                                    <input type="text" [(ngModel)]="repair.content" class="form-control" id="inputContent"
-                                           name="inputContent" placeholder="请输入报修内容">
+                                    <!--<input type="text" [(ngModel)]="repair.content" class="form-control" id="inputContent"-->
+                                           <!--name="inputContent" placeholder="请输入报修内容">-->
+                                    <textarea rows="6" cols="60" [(ngModel)]="repair.content" name="content"></textarea>
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top: 50px;">
