--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -4,20 +4,20 @@
   <!-- Main content -->
   <main class="main">
     <!-- Breadcrumb -->
-    <ol class="breadcrumb">
-      <app-breadcrumbs></app-breadcrumbs>
-      <!-- Breadcrumb Menu-->
-      <li class="breadcrumb-menu d-md-down-none">
-        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-          <a class="btn" href="#"><i class="icon-speech"></i></a>
-          <!--<a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>-->
-          <!--<a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings666</a>-->
-        </div>
-      </li>
-    </ol>
-    <div class="container-fluid">
+    <!--<ol class="breadcrumb">-->
+      <!--<app-breadcrumbs></app-breadcrumbs>-->
+      <!--&lt;!&ndash; Breadcrumb Menu&ndash;&gt;-->
+      <!--<li class="breadcrumb-menu d-md-down-none">-->
+        <!--<div class="btn-group" role="group" aria-label="Button group with nested dropdown">-->
+          <!--&lt;!&ndash;<a class="btn" href="#"><i class="icon-speech"></i></a>&ndash;&gt;-->
+          <!--&lt;!&ndash;<a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>&ndash;&gt;-->
+          <!--&lt;!&ndash;<a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings666</a>&ndash;&gt;-->
+        <!--</div>-->
+      <!--</li>-->
+    <!--</ol>-->
+    <!--<div class="container-fluid">-->
       <router-outlet></router-outlet>
-    </div><!-- /.conainer-fluid -->
+    <!--</div>&lt;!&ndash; /.conainer-fluid &ndash;&gt;-->
   </main>
   <app-aside></app-aside>
 </div>
