--- a/src/app/views/repair/assertRepair.detail.component.html
+++ b/src/app/views/repair/assertRepair.detail.component.html
@@ -45,7 +45,14 @@
                                     </select>
                                 </div>
                             </div>
-
+                            <div class="form-group" style="margin-top: 50px;" *ngIf="status ==2">
+                                <label class="col-sm-2 control-label">检修人</label>
+                                <div class="col-sm-8">
+                                    <select  [(ngModel)]="repairmanId" name="repairman" class="form-control">
+                                        <option *ngFor="let repairman of repairmanList" value="{{repairman.id}}">{{repairman.name}}</option>
+                                    </select>
+                                </div>
+                            </div>
                             <!--<div class="form-group" style="margin-top: 50px;">-->
                                 <!--<rating [(ngModel)]="rate" [max]="max" [readonly]="isReadonly"-->
                                         <!--(onHover)="hoveringOver($event)" (onLeave)="resetStar()"-->
