--- a/src/app/views/repair/repair.list.component.html
+++ b/src/app/views/repair/repair.list.component.html
@@ -48,6 +48,10 @@
                       <a class="dropdown-item" href="javascript:void(0);"
                          (click)="update(repair)">修改</a>
                     </li>
+                    <li role="menuitem" *ngIf="repair.repair_status===3">
+                      <a class="dropdown-item" href="javascript:void(0);"
+                         (click)="evaluate(repair)">评价</a>
+                    </li>
                   </ul>
                 </div>
               </td>
@@ -116,6 +120,39 @@
       </div>
       <div class="modal-footer" *ngIf="!disable">
         <button type="button" class="btn btn-primary" (click)="submitRepair()">确认</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div bsModal #evaluateModal="bs-modal" class="modal fade" tabindex="0" role="dialog"
+     aria-labelledby="myLargeModalLabel" aria-hidden="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">报修评价</h4>
+        <button type="button" class="close pull-right" (click)="evaluateModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label class="control-label">评价等级</label>
+            <label style="width: 100%">
+              <select [(ngModel)]="f_Repair.rate" name="updateEvaluate" class="form-control">
+                <option value="20">一星</option>
+                <option value="40">二星</option>
+                <option value="60">三星</option>
+                <option value="80">四星</option>
+                <option value="100">五星</option>
+              </select>
+            </label>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="evaluateRepair()">确认</button>
       </div>
     </div>
   </div>
