--- a/src/app/views/repair/repair.detail.component.html
+++ b/src/app/views/repair/repair.detail.component.html
@@ -34,6 +34,13 @@
                                            name="inputAddress" placeholder="请输入地址">
                                 </div>
                             </div>
+                            <div class="form-group" style="margin-top: 50px;">
+                                <label class="col-sm-2 control-label">联系方式</label>
+                                <div class="col-sm-8">
+                                    <input type="text" [(ngModel)]="repair.telephone" class="form-control" id="inputTelephone"
+                                           name="inputAddress" placeholder="请联系方式">
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">备注</label>
                                 <div class="col-sm-10">
