fix bug for not show content in printer

--- a/src/app/views/repair/printer.component.html
+++ b/src/app/views/repair/printer.component.html
@@ -6,7 +6,8 @@
                 <label style="width: 9%"></label>
                 <label class="control-label">报修人:</label>
                 <label style="width: 30%">
-                    <input  [(ngModel)]="newUser.name" type="text" class="form-control" id="createUserName" name="createUserName">
+                    <p class="form-control">{{newUser.name}}</p>
+                    <!--<input  value="{{newUser.name}}" type="text" style="text-decoration: underline" id="createUserName" name="createUserName" disabled>-->
                 </label>
                 <label style="width: 10%"></label>
                 <label class="control-label">联系方式:</label>
