fix some Jump url

--- a/src/app/common/component/message/message.component.html
+++ b/src/app/common/component/message/message.component.html
@@ -13,7 +13,7 @@
                     <span class="input-group-btn">
                     <!--<button class="btn btn-info" type="button">Search</button>-->
                     <button class="btn btn-outline-primary" type="button" (click)="jump(returnUrl)">返回上一页</button>
-                        <button class="btn btn-primary" type="button">首页</button>
+                        <!--<button class="btn btn-primary" type="button">首页</button>-->
           </span>
                 </div>
             </div>
