--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -19,8 +19,8 @@
   <!--</ul>-->
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
-      <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span>
+      <a  *ngIf= "name == 'admin' " class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
+        <i class="icon-bell"></i><span class="badge badge-pill badge-danger">{{repairCount>0 ? repairCount:null}}</span>
       </a>
       <!--<div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" *dropdownMenu aria-labelledby="simple-dropdown">-->
         <!--<div class="dropdown-header text-center"><strong>You have 5 notifications</strong></div>-->
